--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -252,7 +252,7 @@ CR style.
 First, let us  broadly  discuss  strategies  and  how  they  influence
 ``definitions''. By *definition* we mean the  allocation  of  a  coset
 number. In a complete coset table each group relator produces a  cycle
-of cosets numbers at each coset number,  in  particular  at  coset  1,
+of cosets numbers at each coset number, in  particular,  at  coset  1;
 i.e.~for each relator $w$, and for each coset number  $i$,  successive
 application of the letters of $w$ trace through a  sequence  of  coset
 numbers that begins and ends in $i$ (see  Section~"Enumeration  Style"
@@ -376,7 +376,7 @@ A `lenlex' standard coset table whose columns correspond, in order, to
 the already-described alphabet, of generators and their inverses,  has
 an important property: a scan of the body of the table row by row from
 left to right, encounters new coset numbers in numeric order.  Observe
-that the table above has this property: the definition of coset  1  is
+that the table below has this property: the definition of coset  1  is
 implicit; the first coset number we encounter in the table body is  2,
 then 2 again, 3, 4, 5, 6, 7, then 7 again, etc.
 
