--- a/doc/install.tex
+++ b/doc/install.tex
@@ -89,10 +89,15 @@ This is done by calling
 
 \beginexample
 gap> RequirePackage( "ace" );
-#I  Loading the ACE (Advanced Coset Enumerator) share package
-#I           by George Havas <havas@csee.uq.edu.au> and
+#I    The ACE (Advanced Coset Enumerator) share package
+#I    C code by George Havas <havas@csee.uq.edu.au> and
 #I              Colin Ramsay <cram@csee.uq.edu.au>
 #I                   ACE binary version: 3.000
+#I    GAP code by Greg Gamble <gregg@csee.uq.edu.au> and
+#I           Alexander Hulpke <ahulpke@math.ohio-state.edu>
+#I                   ACE package version: 3.0
+#I  
+#I                   For help, type: ?ACE
 true
 \endexample
 
