--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -34,9 +34,9 @@
   \medskip
   \centerline{The University of Queensland, St.~Lucia 4072, Australia}\vfill
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
-  \centerline{School of Mathematical and Computational Sciences,}\medskip
-  \centerline{University of St~Andrews, North Haugh, St~Andrews,
-              Fife KY16 9SS, Scotland}\medskip
+  \centerline{Department of Mathematics,}\medskip
+  \centerline{Ohio State University, 231 West 18th Avenue, Columbus,
+              Ohio, 43202 USA}\medskip
   \centerline{and Greg Gamble,}\medskip
   \centerline{Centre for Discrete Mathematics and Computing,} \medskip
   \centerline{Department of Computer Science and Electrical Engineering,}
