--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -526,9 +526,9 @@ Level 2 options:
   host info = on
 \endtt
 
-*INTERACTIVELY* and non-interactively, use the command `ACEVersion();'
-(see~"ACEVersion") for this information, instead, unless you  want  it
-in an {\ACE} standalone input file.
+*INTERACTIVELY*    and    non-interactively,    use    the     command
+`ACEBinaryVersion();' (see~"ACEBinaryVersion") for  this  information,
+instead, unless you want it in an {\ACE} standalone input file.
 
 \>`oo:=<val>'{option oo}@{option `oo'}
 \>`order:=<val>'{option order}@{option `order'}&
