--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -782,6 +782,130 @@ will need to read the C code comments.
 %\endtt
 %
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\Section{Emulating Sims}
+
+Here we demonstrate the various `sims' strategies (see~"option sims"),
+and see if we can duplicate the `m' (maximum active coset numbers) and
+`t'  (total  coset  numbers  defined)  values  (see  the  input   file
+`ex001.in'). The  ability  to  do  so  gives  our  confidence  in  the
+correctness of {\ACE} a large boost. We work with the formal  inverses
+of the relators  and  subgroup  generators  from  \cite{Sim94},  since
+definitions are made from the front in Sims'  routines  and  from  the
+rear in {\ACE}. 
+
+*Do I need to ensure `lenlex' option is in force to ensure this? ...
+ or can I just mention it and leave it to the user?*
+
+We may also have to use the `asis' flag, to force the column order (by
+entering involutions as `xx') and to preserve the relator ordering.
+
+We match Sims' values for R style and R\* style (`sims := 1' and `sims
+:= 3') and C style (`sims :=  9'),  but  may  not  do  so  if  we  use
+Mendelsohn (`sims := 5' and `sims := 7'); this makes sense, since  the
+order of processing cycled relators is not specified by Sims.
+
+*THE FOLLOWING EXAMPLES ARE in ``RAW'' ACE AND NEED TO BE TRANSLATED
+ TO THE EQUIVALENT IN GAP*
+
+The input and output files for Example 5.2:
+
+\begintt
+gr: r,s,t;
+rel: (r^tRR)^-1, (s^rSS)^-1, (t^sTT)^-1;
+text: ;                               sr;
+text: ** Sims:1 (cf. 1502/1550) ...;  sims:1;  end;
+text: ** Sims:3 (cf. 673/673) ...;    sims:3;  end;
+text: ** Sims:5 (cf. 1808/1864) ...;  sims:5;  end;
+text: ** Sims:7 (cf. 620/620) ...;    sims:7;  end;
+text: ** Sims:9 (cf. 588/588) ...;    sims:9;  end;
+\endtt
+
+\begintt
+  #-- ACE 3.000: Run Parameters ---
+Group Name: G;
+Group Relators: rrTRt, ssRSr, ttSTs;
+Subgroup Name: H;
+Subgroup Generators: ;
+  #--------------------------------
+** Sims:1 (cf. 1502/1550) ...
+INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.01; m=1502 t=1550)
+** Sims:3 (cf. 673/673) ...
+INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.01; m=673 t=673)
+** Sims:5 (cf. 1808/1864) ...
+INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.01; m=1603 t=1603)
+** Sims:7 (cf. 620/620) ...
+INDEX = 1 (a=1 r=2 h=2 n=2; l=3 c=0.01; m=615 t=615)
+** Sims:9 (cf. 588/588) ...
+INDEX = 1 (a=1 r=2 h=2 n=2; l=4 c=0.01; m=588 t=588)
+\endtt
+
+The input and output files for Example 5.3, $k=8$:
+
+\begintt
+gr: x,y;
+rel: (xx)^-1, (y^3)^-1, ((xy)^7)^-1, ((xyxY)^8)^-1;
+text: ;                                  sr;
+text: ** Sims:1 (cf. 87254/128562) ...;  sims:1;  end;
+text: ** Sims:3 (cf. 31678/32320) ...;   sims:3;  end;
+text: ** Sims:5 (cf. 99632/178620) ...;  sims:5;  end;
+text: ** Sims:7 (cf. 30108/31365) ...;   sims:7;  end;
+text: ** Sims:9 (cf. 39745/39745) ...;   asis:1;  sims:9;  end;
+\endtt
+
+\begintt
+  #-- ACE 3.000: Run Parameters ---
+Group Name: G;
+Group Relators: XX, YYY, YXYXYXYXYXYXYX, yXYXyXYXyXYXyXYXyXYXyXYXyXYXyXYX;
+Subgroup Name: H;
+Subgroup Generators: ;
+  #--------------------------------
+** Sims:1 (cf. 87254/128562) ...
+INDEX=10752 (a=10752 r=128563 h=1 n=128563; l=27 c=1.00; m=87254 t=128562)
+** Sims:3 (cf. 31678/32320) ...
+INDEX=10752 (a=10752 r=8005 h=32321 n=32321; l=10 c=0.81; m=31678 t=32320)
+** Sims:5 (cf. 99632/178620) ...
+INDEX=10752 (a=10752 r=168547 h=1 n=168547; l=24 c=1.50; m=96952 t=168546)
+** Sims:7 (cf. 30108/31365) ...
+INDEX=10752 (a=10752 r=5738 h=31673 n=31673; l=8 c=0.90; m=30420 t=31672)
+** Sims:9 (cf. 39745/39745) ...
+INDEX=10752 (a=10752 r=1 h=39746 n=39746; l=43 c=1.37; m=39745 t=39745)
+\endtt
+
+The input and output files for Example 5.4:
+
+\begintt
+gr: a,b;
+rel: (a^8)^-1, (b^7)^-1, ((ab)^2)^-1, ((Ab)^3)^-1;
+gen: (a^2)^-1, (Ab)^-1;
+asis:1;
+text: ;                               sr;
+text: ** Sims:1 (cf. 2174/2635) ...;  sims:1;  end;
+text: ** Sims:3 (cf. 1199/1212) ...;  sims:3;  end;
+text: ** Sims:5 (cf. 2213/2619) ...;  sims:5;  end;
+text: ** Sims:7 (cf. 1258/1284) ...;  sims:7;  end;
+text: ** Sims:9 (cf. 1302/1306) ...;  asis:0;  sims:9;  end;
+\endtt
+
+\begintt
+  #-- ACE 3.000: Run Parameters ---
+Group Name: G;
+Group Relators: AAAAAAAA, BBBBBBB, BABA, BaBaBa;
+Subgroup Name: H;
+Subgroup Generators: AA, Ba;
+  #--------------------------------
+** Sims:1 (cf. 2174/2635) ...
+INDEX = 448 (a=448 r=2636 h=1 n=2636; l=4 c=0.02; m=2174 t=2635)
+** Sims:3 (cf. 1199/1212) ...
+INDEX = 448 (a=448 r=576 h=1213 n=1213; l=3 c=0.02; m=1199 t=1212)
+** Sims:5 (cf. 2213/2619) ...
+INDEX = 448 (a=448 r=2620 h=1 n=2620; l=4 c=0.03; m=2213 t=2619)
+** Sims:7 (cf. 1258/1284) ...
+INDEX = 448 (a=448 r=612 h=1285 n=1285; l=3 c=0.02; m=1258 t=1284)
+** Sims:9 (cf. 1302/1306) ...
+INDEX = 448 (a=448 r=1 h=1307 n=1307; l=5 c=0.02; m=1302 t=1306)
+\endtt
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %E
