--- a/doc/options.tex
+++ b/doc/options.tex
@@ -109,7 +109,7 @@ programs may lead to misinterpretations. Considering  how  much  of  a
 potential mine-field a  non-empty  `OptionsStack'  might  be  for  the
 unwary user, we have provided
 
-\>FlushOptionsStack()!{additional remarks} F
+\>FlushOptionsStack() F
 
 which simply executes `PopOptions()' until `OptionsStack' is empty.
 
@@ -170,7 +170,7 @@ when those same options are passed to the {\ACE} binary.  One  of  the
 reasons for the non-orthogonality of options is to  protect  the  user
 from obtaining invalid enumerations from bad combinations of  options;
 another reason is that commonly one may specify a strategy option  and
-override some of that strategies defaults; the general  rule  is  that
+override some of that strategy's defaults; the general  rule  is  that
 the later option prevails. By the way, it's not illegal to select more
 than one strategy, but it's not sensible; as just mentioned, the later
 one prevails.
@@ -284,7 +284,11 @@ understand is simply ignored and a warning appears in the output  from
 {\ACE}. If this occurs, you may wish to check the input fed to  {\ACE}
 and the output from {\ACE}, which when {\ACE} is run non-interactively
 are stored in files whose full path names are recorded in  the  record
-fields `ACEData.infile' and `ACEData.outfile', respectively.
+fields   `ACEData.infile'   and    `ACEData.outfile',    respectively.
+Alternatively, both interactively and non-interactively  one  can  set
+the `InfoLevel' of `InfoACE' to 3 (see~"SetInfoACELevel"), to see  the
+output from {\ACE}, or to 4 to  also  see  the  commands  directed  to
+{\ACE}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{An Example of passing Options}
@@ -539,7 +543,7 @@ returned. Each position of the table  without  a  valid  coset  number
 entry is filled with a zero. If  the  option  `silent'  is  also  set,
 `incomplete' prevails. For {\GAP}~4.3 and later, an  incomplete  table
 is returned reduced (i.e.~with insignificant coset numbers  ---  those
-appearing only in there place of definition --- removed) and  `lenlex'
+appearing only in their place of definition --- removed) and  `lenlex'
 standardised (regardless of whether  the  `semilenlex'  option  is  in
 force). For GAP~4.2, an incomplete table  is  returned  unstandardised
 unless the `lenlex' option (see~"option lenlex") is also set, and  the
