--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -217,16 +217,16 @@ In his book~\cite{Sim94},  Sims  discusses  ten  standard  enumeration
 strategies; these are effectively `hlt' (see~"option hlt"),  with  and
 without  `mendelsohn'  (see~"option  mendelsohn")  set,  and  `felsch'
 (see~"option felsch"), all either with  or  without  (`lenlex')  table
-standardisation (see Section~"Coset Table Standardisation Schemes") as
-the  enumeration   proceeds.   {\ACE}   does   not   implement   table
-standardisation during an enumeration, although incomplete tables  can
-be standardised  and  an  enumeration  continued.  The  `sims'  option
-implements  the   five   odd-numbered   non-standardising   strategies
-of~\cite{Sim94}  ({\ACE}'s  numbering  is  the  same   as   given   in
-Section~5.5 of~\cite{Sim94}). With care, it is possible  to  duplicate
-the    statistics    given    in~\cite{Sim94}    (see     the     note
-of~"ACEStandardCosetNumbering" or~"option  standard");  some  examples
-are given in Appendix~"Examples".
+standardisation (see  Section~"Coset  Table  Standardisation  Schemes"
+and~"ACEStandardCosetNumbering"   or~"option   standard")    as    the
+enumeration proceeds. {\ACE} does not implement table  standardisation
+during an enumeration, although incomplete tables can be  standardised
+and an enumeration continued. The `sims' option  implements  the  five
+odd-numbered non-standardising  strategies  of~\cite{Sim94}  ({\ACE}'s
+numbering   of   the    strategies    coincides    with    Section~5.5
+of~\cite{Sim94}).  With  care,  it  is  possible  to   duplicate   the
+statistics  given  in~\cite{Sim94};  some  examples   are   given   in
+Section~"Emulating Sims".
 
 \enditems
 
